--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@
   --fw-600: 600;
   --fw-700: 700;
 
+  --fs-300: 0.6875rem;
   --fs-400: 0.875rem;
   --fs-500: 1rem;
   --fs-900: 1.7rem;
@@ -25,8 +26,7 @@
 
 @media (min-width: 48rem) {
   :root {
-    --fs-400: 0.875rem;
-    --fs-500: 1rem;
+    --fs-300: 0.75rem;
     --fs-900: 3.0625rem;
   }
 }
@@ -122,6 +122,9 @@ h6 {
   -moz-box-shadow: 0px -2px 0px 1px rgba(0, 0, 0, 0.1) inset;
 }
 
+.hidden {
+  display: none;
+}
 /* ----- General styling ----- */
 body {
   font-family: var(--ff-base);
@@ -234,8 +237,12 @@ footer a {
 @media (min-width: 48rem) {
   .form__form {
     gap: 1.25rem;
-    padding: 40px;
+    padding: 2.5rem;
   }
+}
+
+.form__form-field {
+  position: relative;
 }
 
 .form__input {
@@ -259,6 +266,27 @@ footer a {
   outline: 1px solid var(--clr-accent-500);
 }
 
+.form__input-error {
+  border: 3px solid var(--clr-primary-500);
+}
+
+.form__input-error-icon {
+  position: absolute;
+  right: 1.5rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.form__input-error-msg {
+  color: var(--clr-primary-500);
+  font-size: var(--fs-300);
+  font-style: italic;
+  text-align: left;
+  position: absolute;
+  bottom: -1.25rem;
+  right: 0;
+}
+
 .form__submit {
   text-transform: uppercase;
   color: var(--clr-neutral-100);
@@ -275,7 +303,7 @@ footer a {
   text-align: center;
   padding: 0rem 1rem;
   color: var(--clr-neutral-500);
-  font-size: 11px;
+  font-size: var(--fs-300);
 }
 
 .form__terms a {
