📑 Add succesful modal

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -311,3 +311,89 @@ footer a {
   text-decoration: none;
   font-weight: var(--fw-700);
 }
+/* ----- Modal ----- */
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 36rem;
+  border: 0;
+  padding: 2rem;
+  border-radius: 1rem;
+  text-align: center;
+}
+
+.modal[open] {
+  animation: fade-in 0.5s forwards;
+}
+
+.modal[closing] {
+  display: block;
+  pointer-events: none;
+  inset: 0;
+  animation: fade-out 0.5s forwards;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal-content > * {
+  margin: 0 0 0.5rem 0;
+}
+
+.modal::backdrop {
+  background: black;
+  opacity: 0.4;
+}
+
+.modal[open]::backdrop {
+  animation: fade-in 0.3s forwards;
+}
+
+.modal[closing]::backdrop {
+  animation: fade-out-backdrop 0.3s forwards;
+}
+
+.modal__success-icon {
+  margin: 0 auto;
+}
+
+.btn-close {
+  color: var(--clr-neutral-100);
+  background-color: var(--clr-accent-500);
+  padding: 0.75rem 2rem;
+  border-radius: 0.5rem;
+  border: none;
+  font-weight: var(--fw-600);
+  cursor: pointer;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes fade-out-backdrop {
+  0% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 0;
+  }
+}
